--- a/company.html
+++ b/company.html
@@ -692,66 +692,24 @@
     </header>
     <!-- HEADER END -->
 
-    <div class="text_block scroll_block">
+    <div class="text_block">
       <div class="container">
-        <div class="text_block__content scroll_block__content">
-          <h4>Политика в отношении обработки персональных данных</h4>
+        <div class="text_block__content">
+          <h2>О компании</h2>
           <p>
-            Присоединяясь к настоящему Соглашению и оставляя свои данные на
-            сайте https://ctofeniks.ru/ (далее – Сайт), путем заполнения полей
-            формы записи на прием, формы обратной связи, или формы комментариев
-            (далее – Форма), Пользователь:
+            Компания ООО "ЦТО Феникс" более 20 лет на рынке России. Основной
+            профиль это работа с сегменте B2B. Продажа, ремонт и техническое
+            обслуживание кассовой техники и торгового оборудования.
           </p>
           <p>
-            - подтверждает, что все указанные им данные и информация являются
-            полными, точными и достоверными;
+            Мы предоставляем нашим клиентам как онлайн услуги - дистанционная
+            настройка и наладка программного обеспечения, так и выездные работы
+            специалиста непосредственно к клиенту.
           </p>
           <p>
-            - гарантирует, что при предоставлении данных и информации не
-            нарушается действующее законодательство Российской Федерации,
-            законные права и интересы третьих лиц;
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
+            Поставляем все необходимое оборудование, а так же его наладку и
+            настройку для торговлю из любого сегмента рынка “под ключ”. Наши
+            специалисты имеют богатый опыт в решении вопросов любой сложности!
           </p>
         </div>
       </div>
