--- a/contacts.html
+++ b/contacts.html
@@ -19,14 +19,19 @@
 
     <link rel="stylesheet" href="libs/wow/animate.min.css" />
     <link rel="stylesheet" href="libs/hamburgers/hamburgers.min.css" />
+    <link rel="stylesheet" href="libs/fancybox/fancybox.css" />
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
 
+    <script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
     <script src="libs/wow/wow.min.js" defer></script>
+    <script src="libs/fancybox/fancybox.umd.js" defer></script>
     <script src="libs/micromodal/micromodal.min.js" defer></script>
+    <script src="libs/masonry/masonry.pkgd.min.js" defer></script>
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
+    <script src="libs/imask/imask.js" defer></script>
     <script src="js/common.js" defer></script>
   </head>
 
@@ -692,67 +697,116 @@
     </header>
     <!-- HEADER END -->
 
-    <div class="text_block scroll_block">
+    <div class="contacts_block">
       <div class="container">
-        <div class="text_block__content scroll_block__content">
-          <h4>Политика в отношении обработки персональных данных</h4>
-          <p>
-            Присоединяясь к настоящему Соглашению и оставляя свои данные на
-            сайте https://ctofeniks.ru/ (далее – Сайт), путем заполнения полей
-            формы записи на прием, формы обратной связи, или формы комментариев
-            (далее – Форма), Пользователь:
-          </p>
-          <p>
-            - подтверждает, что все указанные им данные и информация являются
-            полными, точными и достоверными;
-          </p>
-          <p>
-            - гарантирует, что при предоставлении данных и информации не
-            нарушается действующее законодательство Российской Федерации,
-            законные права и интересы третьих лиц;
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
+        <div class="contacts_block__inner">
+          <form class="form contacts_form">
+            <h2 class="form__title title title_md">Напишите нам</h2>
+            <div class="form_group">
+              <input
+                type="text"
+                placeholder="Ваше имя*"
+                class="form_input"
+                autocomplete="off"
+              />
+              <input
+                type="text"
+                placeholder="Ваша почта email*"
+                class="form_input"
+                autocomplete="off"
+              />
+              <input
+                type="text"
+                placeholder="Ваш номер телефона"
+                class="form_input form_phone"
+                autocomplete="off"
+              />
+              <textarea
+                class="form_textarea"
+                placeholder="Ваше сообщение*"
+              ></textarea>
+              <p class="form_note">* - пункты, обязательные для заполнения</p>
+              <button class="btn form_submit">Написать</button>
+            </div>
+          </form>
+          <div class="contacts_block__content">
+            <h2 class="contacts_block__title title title_md">Контакты</h2>
+            <ul class="contacts_list">
+              <li>
+                <span>Телефон:</span>
+                <a href="tel:89185455993">8 (918) 545-59-93</a>
+              </li>
+              <li>
+                <span>E-mail:</span>
+                <a href="mailto:vvvasilevsa@gmail.com">vvvasilevsa@gmail.com</a>
+              </li>
+              <li>
+                <span>Адрес:</span>
+                <p>344002, г. Ростов-на-Дону, ул. Пойменная 2а, парковка P9</p>
+              </li>
+            </ul>
+            <ul class="contacts_social">
+              <li>
+                <a href="#" class="contacts_social__link">
+                  <span class="contacts_social__icon">
+                    <svg
+                      width="39"
+                      height="39"
+                      viewBox="0 0 39 39"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M17.2911 0.0762606C12.8889 0.631082 8.90148 2.56704 5.80005 5.65539C2.67069 8.77146 0.783644 12.5758 0.214069 16.9168C0.0710326 18.0071 0.0518349 20.6074 0.179932 21.5499C0.529816 24.125 1.36174 26.5096 2.76486 28.9593L3.23155 29.7741L3.03558 30.3459C2.92783 30.6603 2.21542 32.6439 1.45252 34.7539C0.689616 36.8638 0.0452104 38.6824 0.0204697 38.7951C-0.0213731 38.9857 -0.0110983 39.0001 0.16675 39C0.349601 38.9999 2.05218 38.5363 7.7459 36.9365L10.3344 36.2091L11.334 36.6875C13.1639 37.5633 14.5242 38.0405 16.1758 38.3861C17.562 38.6762 18.5159 38.7543 20.1281 38.7096C23.4231 38.6181 26.0833 37.8812 29.143 36.2124C30.1052 35.6876 30.2992 35.5651 31.081 34.989C35.2933 31.885 38.0625 27.3256 38.8531 22.1925C39.0496 20.9157 39.0488 17.9359 38.8515 16.5787C38.3468 13.1086 36.8832 9.79176 34.6766 7.11782C34.3967 6.77849 33.7848 6.11971 33.3171 5.6539C31.7251 4.06836 30.2082 2.98395 28.2081 2.00146C26.1416 0.986444 24.5632 0.491075 22.2933 0.145114C21.2668 -0.0113286 18.3089 -0.0520457 17.2911 0.0762606ZM22.2595 3.28466C25.6923 3.88223 28.5476 5.32951 31.0047 7.71728C33.4625 10.1056 34.9484 12.8564 35.6456 16.3081C35.9589 17.8589 35.9903 20.5121 35.7139 22.0848C35.1091 25.5279 33.4929 28.5725 30.9711 31.0203C28.5825 33.3387 25.8242 34.7501 22.4341 35.3889C20.7435 35.7075 18.1723 35.6866 16.4462 35.3404C14.5968 34.9694 12.2913 34.0681 10.8747 33.1622C10.5796 32.9735 10.4744 32.9388 10.3339 32.984C10.2381 33.0149 9.04932 33.3477 7.6923 33.7235C6.33528 34.0994 5.13827 34.4355 5.03234 34.4704C4.86369 34.5259 4.84557 34.5192 4.88748 34.4166C4.91378 34.3522 5.32673 33.2117 5.80525 31.8824L6.67523 29.4654L5.99398 28.4329C4.50197 26.1716 3.63963 23.8883 3.29232 21.2794C3.18213 20.4519 3.18213 18.2516 3.29232 17.4241C3.80613 13.5647 5.42062 10.3209 8.1402 7.68414C10.718 5.18491 13.7365 3.73241 17.4939 3.18321C18.4668 3.04097 21.1932 3.09907 22.2595 3.28466ZM11.5792 9.06074C10.9248 9.36565 9.94201 10.6186 9.50127 11.7099C9.15964 12.5558 9.07791 13.0482 9.08021 14.2452C9.08217 15.2492 9.10096 15.4285 9.26746 16.0318C9.64167 17.3877 10.2926 18.702 11.4474 20.4339C13.4271 23.4028 16.0783 26.0791 18.4646 27.5173C19.7617 28.2991 21.9011 29.225 23.2843 29.6033C24.0404 29.81 25.468 29.8595 26.1897 29.7039C27.2761 29.4696 28.7319 28.5491 29.3237 27.7222C29.7827 27.0809 30.1083 25.7982 30.0544 24.8441C30.0233 24.2931 30.0004 24.2676 29.0633 23.7434C28.0265 23.1634 25.6001 21.961 25.2325 21.845C24.8904 21.7371 24.8664 21.7378 24.6492 21.8644C24.516 21.942 24.1095 22.4131 23.6627 23.0075C22.7869 24.1728 22.3156 24.6612 22.0666 24.6612C21.8646 24.6612 20.1696 23.8096 19.4542 23.3487C17.919 22.3596 16.523 20.9447 15.3767 19.2165C14.7218 18.229 14.4301 17.6368 14.4869 17.4103C14.5094 17.3206 14.7848 16.9294 15.0989 16.5409C15.6704 15.8343 16.2096 14.9023 16.2096 14.6212C16.2096 14.4206 16.0162 13.8747 15.1677 11.6789C14.0671 8.83112 14.1284 8.9018 12.7621 8.90268C12.02 8.90322 11.876 8.92243 11.5792 9.06074Z"
+                        fill="#23262B"
+                      />
+                    </svg>
+                  </span>
+                  <span class="contacts_social__label">WhatsApp</span>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="contacts_social__link">
+                  <span class="contacts_social__icon">
+                    <svg
+                      width="41"
+                      height="24"
+                      viewBox="0 0 41 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M38.7367 19.2201C37.5508 17.7407 36.1552 16.4781 34.8348 15.1374C33.6435 13.9289 33.5684 13.2278 34.526 11.833C35.5711 10.3107 36.6951 8.84672 37.7497 7.33127C38.7342 5.91498 39.7405 4.50256 40.2586 2.8068C40.5871 1.72795 40.2965 1.25142 39.2328 1.06253C39.0496 1.02947 38.8601 1.02775 38.6735 1.02775L32.3627 1.02003C31.5854 1.00801 31.1557 1.36047 30.8808 2.07698C30.5097 3.0455 30.1271 4.01315 29.685 4.94776C28.682 7.06681 27.5617 9.11504 25.9911 10.8494C25.6448 11.232 25.2618 11.7154 24.6831 11.5162C23.9591 11.2414 23.7457 10.0007 23.7576 9.58127L23.7514 2.00529C23.6111 0.923004 23.3804 0.440463 22.3472 0.230103L15.7916 0.231391C14.9165 0.231391 14.4777 0.582992 14.0105 1.15225C13.7409 1.4811 13.6596 1.69447 14.2135 1.80351C15.3016 2.01817 15.9146 2.75056 16.0772 3.88522C16.3381 5.69818 16.3199 7.51845 16.1697 9.33871C16.1255 9.87019 16.0376 10.4004 15.8349 10.8967C15.5179 11.6767 15.0061 11.8356 14.3337 11.3556C13.7248 10.9211 13.2972 10.3081 12.8786 9.69246C11.3064 7.38193 10.052 4.89023 9.02914 2.27189C8.73359 1.51545 8.22382 1.05695 7.45318 1.0445C5.5598 1.01316 3.666 1.00801 1.77262 1.04621C0.633376 1.06854 0.293666 1.64381 0.75762 2.71794C2.81982 7.48882 5.11524 12.1271 8.11155 16.3523C9.64995 18.5207 11.4162 20.435 13.698 21.7916C16.284 23.3294 19.0677 23.7922 21.9996 23.6497C23.3725 23.5827 23.7849 23.2113 23.8484 21.7882C23.8914 20.8145 23.9975 19.8464 24.4593 18.9715C24.9126 18.1129 25.599 17.9493 26.3903 18.4834C26.7861 18.7508 27.1197 19.0913 27.4346 19.4502C28.2073 20.3294 28.9524 21.2352 29.7544 22.0848C30.7603 23.1495 31.952 23.7784 33.4503 23.6501L39.2506 23.6514C40.1851 23.5878 40.6697 22.3961 40.1331 21.3112C39.7562 20.5513 39.2617 19.8748 38.7367 19.2201Z"
+                        fill="#23262B"
+                      />
+                    </svg>
+                  </span>
+                  <span class="contacts_social__label">ВКонтакте</span>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="contacts_social__link">
+                  <span class="contacts_social__icon">
+                    <svg
+                      width="41"
+                      height="41"
+                      viewBox="0 0 41 41"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M20.858 0.142148C12.6644 0.142148 4.88374 -0.583877 1.91185 7.01353C0.684277 10.1514 0.862546 14.2266 0.862546 20.0618C0.862546 25.1821 0.697817 29.9946 1.91185 33.1077C4.87697 40.7096 12.7208 39.9814 20.8534 39.9814C28.6995 39.9814 36.7893 40.795 39.7973 33.1077C41.0271 29.9384 40.8466 25.9239 40.8466 20.0618C40.8466 12.28 41.2776 7.25629 37.4888 3.48456C33.6527 -0.336624 28.4648 0.142148 20.8489 0.142148H20.858ZM19.0662 3.73181C36.1575 3.70484 38.3328 1.81223 37.1323 28.1042C36.7058 37.4032 29.5976 36.3827 20.8602 36.3827C4.92887 36.3827 4.47079 35.9287 4.47079 20.0528C4.47079 3.99255 5.73447 3.7408 19.0662 3.72732V3.73181ZM31.5315 7.03826C30.2069 7.03826 29.1328 8.10819 29.1328 9.42762C29.1328 10.7471 30.2069 11.817 31.5315 11.817C32.8561 11.817 33.9302 10.7471 33.9302 9.42762C33.9302 8.10819 32.8561 7.03826 31.5315 7.03826ZM20.858 9.83222C15.1872 9.83222 10.5906 14.4131 10.5906 20.0618C10.5906 25.7104 15.1872 30.289 20.858 30.289C26.5287 30.289 31.1231 25.7104 31.1231 20.0618C31.1231 14.4131 26.5287 9.83222 20.858 9.83222ZM20.858 13.4219C29.6698 13.4219 29.6811 26.7016 20.858 26.7016C12.0483 26.7016 12.0348 13.4219 20.858 13.4219Z"
+                        fill="#23262B"
+                      />
+                    </svg>
+                  </span>
+                  <span class="contacts_social__label">Instagram</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
