--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="libs/wow/wow.min.js" defer></script>
     <script src="libs/micromodal/micromodal.min.js" defer></script>
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
+    <script src="libs/imask/imask.js" defer></script>
     <script src="js/common.js" defer></script>
   </head>
 
@@ -1377,7 +1378,7 @@
                 <input
                   type="text"
                   placeholder="Ваш номер телефона"
-                  class="form_input"
+                  class="form_input form_phone"
                   autocomplete="off"
                 />
                 <input
