--- a/gallery.html
+++ b/gallery.html
@@ -19,13 +19,17 @@
 
     <link rel="stylesheet" href="libs/wow/animate.min.css" />
     <link rel="stylesheet" href="libs/hamburgers/hamburgers.min.css" />
+    <link rel="stylesheet" href="libs/fancybox/fancybox.css" />
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
 
+    <script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
     <script src="libs/wow/wow.min.js" defer></script>
+    <script src="libs/fancybox/fancybox.umd.js" defer></script>
     <script src="libs/micromodal/micromodal.min.js" defer></script>
+    <script src="libs/masonry/masonry.pkgd.min.js" defer></script>
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
     <script src="js/common.js" defer></script>
   </head>
@@ -692,67 +696,52 @@
     </header>
     <!-- HEADER END -->
 
-    <div class="text_block scroll_block">
+    <div class="gallery_block">
       <div class="container">
-        <div class="text_block__content scroll_block__content">
-          <h4>Политика в отношении обработки персональных данных</h4>
-          <p>
-            Присоединяясь к настоящему Соглашению и оставляя свои данные на
-            сайте https://ctofeniks.ru/ (далее – Сайт), путем заполнения полей
-            формы записи на прием, формы обратной связи, или формы комментариев
-            (далее – Форма), Пользователь:
-          </p>
-          <p>
-            - подтверждает, что все указанные им данные и информация являются
-            полными, точными и достоверными;
-          </p>
-          <p>
-            - гарантирует, что при предоставлении данных и информации не
-            нарушается действующее законодательство Российской Федерации,
-            законные права и интересы третьих лиц;
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
-          <h4>Политика конфиденциальности и файлы cookie</h4>
-          <p>
-            Интернет-сайт https://streetbike.ru/ (далее — «Сайт») использует
-            файлы cookie и схожие технологии, чтобы гарантировать максимальное
-            удобство пользователям (далее — «Пользователи»), предоставляя
-            персонализированную информацию, запоминая предпочтения в области
-            маркетинга и контента Сайта, а также помогая получить нужную
-            Пользователю информацию. При использовании данного сайта, вы
-            подтверждаете свое согласие на использование файлов cookie в
-            соответствии с настоящим уведомлением в отношении данного типа
-            файлов. Если вы не согласны с тем, чтобы мы использовали данный тип
-            файлов, то вы должны соответствующим образом установить настройки
-            вашего браузера или не использовать Сайт.
-          </p>
+        <div
+          class="masonry_gallery"
+          data-masonry='{ "itemSelector": ".masonry_gallery__item", "gutter": 15, "horizontalOrder": true }'
+        >
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/1.png" data-fancybox="gallery"
+              ><img src="images/gallery/1.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/2.png" data-fancybox="gallery"
+              ><img src="images/gallery/2.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/3.png" data-fancybox="gallery"
+              ><img src="images/gallery/3.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/4.png" data-fancybox="gallery"
+              ><img src="images/gallery/4.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/5.png" data-fancybox="gallery"
+              ><img src="images/gallery/5.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/6.png" data-fancybox="gallery"
+              ><img src="images/gallery/6.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/7.png"
+              ><img src="images/gallery/7.png" alt=""
+            /></a>
+          </div>
+          <div class="masonry_gallery__item">
+            <a href="images/gallery/8.png"
+              ><img src="images/gallery/8.png" alt=""
+            /></a>
+          </div>
         </div>
       </div>
     </div>
